syntax = "proto3";

package billing.protobuf.point;

import "Core.proto";

option csharp_namespace = "Billing.Protobuf.Point";

//포인트 타입
enum PointType
{
    NONE = 0;
    PAID = 1;
    FREE = 2;
    MILEAGE = 3;
}

// 포인트 작업 타입
enum PointOperationType {
    CREATE = 0;
    CHARGE = 1;
    WITHDRAW = 2;
}

// 포인트 구매 정보
message PointPurchase {
    PointType point_type = 1;
    int64 amount = 2;
}
